W05 Final Project Part 1: First Two Collections with Crud Operations and API Documentation
